feat: non-tested films handlers
